force-app/main/default/objects/Book__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <formula>if( Available_Copies__c = 0,
 &quot;Not Available&quot;, 
 if( Available_Copies__c &lt;= 2,
  &quot;Limited&quot;,
  &quot;Available&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability Status</label>
    <type>Text</type>
</CustomField>