force-app/main/default/objects/Book__c/fields/Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Available_Copies__c</fullName>
    <formula>Total_Copies__c -  Total_books_borrowed__c</formula>
    <label>Available Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>