force-app/main/default/objects/Book__c/fields/Total_books_borrowed__c.field-meta.xml
<CustomField>
    <fullName>Total_books_borrowed__c</fullName>
    <description>Total books borrowed per member</description>
    <label>Total books borrowed</label>
    <summaryFilterItems>
        <field>Borrow_History__c.Return_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Borrow_History__c.Book_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>