force-app/main/default/objects/Book__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Copies__c</columns>
    <columns>Total_books_borrowed__c</columns>
    <columns>Available_Copies__c</columns>
    <columns>Availability_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>